--- a/study/lesson10/html/chat.html
+++ b/study/lesson10/html/chat.html
@@ -12,7 +12,8 @@
 
 <body class="w-screen h-screen bg-blue-400">
     <button id="logout">Logout</button>
-    <div class="flex flex-col w-1/2 h-screen bg-white mx-auto p-8">
+
+    <div class="flex flex-col w-1/2 h-auto bg-white mx-auto p-8">
         <ul id="msgContainer">
 
         </ul>
@@ -22,8 +23,8 @@
             <button type="submit" class="hidden">submit</button>
         </form>
     </div>
-    <script src="./js/firebase.js" type="module"></script>
-    <script src="./js/chat.js" type="module"></script>
+    <script src="../js/firebase-config.js" type="module"></script>
+    <script src="../js/chat.js" type="module"></script>
 </body>
 
 </html>
