--- a/study/lesson10/html/index.html
+++ b/study/lesson10/html/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +19,7 @@
                 Account</button>
         </div>
     </div>
-    <script src="./js/firebase.js" type="module"></script>
+    <script src="./js/firebase-config.js" type="module"></script>
     <script src="./js/login.js" type="module"></script>
 </body>
 
