--- a/study/lesson10/html/index.html
+++ b/study/lesson10/html/index.html
@@ -19,8 +19,8 @@
                 Account</button>
         </div>
     </div>
-    <script src="./js/firebase-config.js" type="module"></script>
-    <script src="./js/login.js" type="module"></script>
+    <script src="../js/firebase-config.js" type="module"></script>
+    <script src="../js/login.js" type="module"></script>
 </body>
 
 </html>
